--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
     <link rel="shortcut icon" href="images/hardy.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body class="open-sans-normal">
-    <header>
+    <header >
       <nav>
         <div class="container">
           <h3>Ma<span class="brand_color">r</span>y</h3>
